--- a/index.html
+++ b/index.html
@@ -20,3 +20,12 @@
     <div class="half-width"><img src="my-bg.png" alt=""></div></section>
 </body>
 </html>
+<section class="dreem big">
+    <div class="dreem"><img src="my-bg2.png" alt=""></div>
+    <div class="dreem"><h1>Dream Big</h1>
+        <h3>Become a web developer</h3>
+        <p1>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p1>
+        <a class="link-button" target="_blank" href="">Download Resume</a>
+    
+    </div>
+</section>
